<resources>
	<string name="hello">Hello GeoTechMobile!</string>
	<string name="app_name">GeoTechMobile</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="cancel">Cancel</string>
	<string name="load">Load</string>
	<string name="workspace">Workspace</string>
	<string name="layer">Layer management</string>
	<string name="type">Type</string>
	<string name="geometry_column">Geometry column</string>
	<string name="do_import">Import</string>
	<string name="warning">Warning</string>
	<string name="do_continue">Continue</string>
	<string name="point">Point</string>
	<string name="line">Line</string>
	<string name="polygon">Polygon</string>
	<string name="unknown">Unknown</string>
	<string name="back">Back</string>
	<string name="apply">apply</string>
	<string name="filter">Filter</string>
	<string name="view">View</string>
	<string name="new_">New Feature</string>
	<string name="close">Close</string>
	<string name="calculate">Calculate</string>
	<string name="input">Input</string>
	<string name="error">Error</string>
	<string name="longitude">Longitude</string>
	<string name="lon">Lon</string>
	<string name="latitude">Latitude</string>
	<string name="lat">Lat</string>
	<string name="projection">Projection</string>
	<string name="set">Set</string>
	<string name="gps_position">GPS Position</string>
	<string name="zoom_to_bounds">Zoom to bounds</string>
	<string name="sync">Synchronize Layer</string>
	<string name="add_server">Choose Layer</string>
	<string name="navi">GPS Position\nOn/Off</string>
	<string name="edit">Edit Feature</string>
	<string name="layer_locked">Locked Layer to edit: </string>
	<string name="locked_type">Layer type: </string>
	<string name="leftnd_gfwl">Lock management</string>
	<string name="delete">delete</string>
	<string name="remove">remove</string>
	<string name="releaseLockButton">Release Lock</string>
	<string name="editFeatureButton">Edit Feature</string>
	<string name="features">Features: </string>
	<string name="attributes">Attributes: </string>
	<string name="add_layer_table_locked_box">locked due this device</string>
	<string name="add_layer_table_chosen_box">already chosen</string>
	<string name="buildTableTask_connecting">Connecting to server</string>
	<string name="buildTableTask_waiting">Waiting for service response...</string>
	<string name="buildTableTask_workspace">Workspace</string>
	<string name="buildTableTask_name">Name</string>
	<string name="buildTableTask_epsg">Reference</string>
	<string name="addLayerTable_features_column_title">Sum Features</string>
	<string name="addLayerTable_thrown_illegalArgumentException">Don\'t except more than 3 head titles!</string>
	<string name="ok">OK</string>
	<string name="message">Message</string>
	<string name="getFeatureWithLockActivity_locked_message">Layer locked till </string>
	<string name="leftmenu_settings">Settings</string>
	<string name="project_settings">Project-Settings</string>
	<string name="project">Current Project:</string>
	<string name="getfeaturewithlock_lock_button_text">Lock layer</string>
	<string name="addLayerTable_already_chosen">Get</string>
	<string name="project_no_project_chosen">No Project chosen</string>
	<string name="addLayerTable_features_column_type">Type</string>
	<string name="expiry_picker_selectedDate">Lock until:</string>
	<string name="kriging">Kriging</string>
	<string name="vehicle">Vehicle</string>
	<string name="delta">Accuracy</string>
	<string-array name="input_output_type">
		<item>File</item>
		<item>Database</item>
	</string-array>
	<string-array name="auto_sync">
		<item>OFF</item>
		<item>ON</item>
	</string-array>
	<string-array name="bool">
		<item>No (false - 0)</item>
		<item>Yes (true - 1)</item>
	</string-array>
	<string-array name="coordinate_reference_systems">
		<item>Google Mercator | epsg:3785</item>
		<item>WGS 84 | epsg:4326</item>
		<item>Gauss-Krüger Zone 2 | epsg:31465</item>
		<item>Gauss-Krüger Zone 3 | epsg:31466</item>
		<item>Gauss-Krüger Zone 4 | epsg:31467</item>
		<item>Gauss-Krüger Zone 5 | epsg:31468</item>
		<item>UTM Zone 31N | epsg:32631</item>
		<item>UTM Zone 32N | epsg:32632</item>
		<item>UTM Zone 33N | epsg:32633</item>
		<item>Lambert | epsg:2192</item>
	</string-array>
	<string-array name="feature_type">
		<item>Point</item>
		<item>Line</item>
		<item>Polygon</item>
	</string-array>
	<string name="elementSelector_backButton">Back to Layer-Overview</string>
	<string name="satCount">Number of satellites</string>
	<string name="averageElevation">Average elevation</string>
	<string name="minElevation">Min elevation</string>
	<string name="accuracy">Precision</string>
	<string name="radioDelta">Filtering for precision</string>
	<string name="radioNone">Show all</string>
	<string name="filterIntro">Please choose an option</string>
	<string name="radioSatCount">Filtering for numbers of satellites </string>
	<string name="radioMinElevation">Filtering for min elevation</string>
	<string name="filterDo">apply</string>
	<string name="radioAverageElevation">Filtering for average elevation</string>
	<string name="satFixCount">Number of used satellites</string>
	<string name="attrSelectIntro">Which attributes should be displayed in overview?</string>
	<string name="errorSaveAlert">No Feature created! OR selected Feature is already saved! You have to create a new Feature (e.g. by usinge GPS).</string>
	<string name="nothingToSave">Can not save. No Feature exists!</string>
	<string name="noUrlTitle">Can not connect to server!</string>
	<string name="noUrlMsg">No URL available. Want to enter an URL now?</string>
	<string name="automaticAttributeManagerIntroMsg">No Attributes activated.Please choose Attributes you want to see on the Display.</string>
	<string name="text_settings_edit_project">"Edit project settings... "</string>
	<string name="text_settings_wfs">"WFS settings: "</string>
	<string name="text_settings_url">"URL: "</string>
	<string name="text_button_test_connection">Test connection</string>
	<string name="text_switch_auto_sync">Auto-sync WFS</string>
	<string name="text_settings_background_maps">"Background maps: "</string>
	<string name="text_switch_openstreetmap">OpenStreetMap</string>
	<string name="text_button_apply_changes">Apply changes</string>
	<string name="text_settings_wms">"WMS settings: "</string>
	<string name="text_button_back_to_addlayeractivity">Back</string>
	<string name="text_info_wms">Please insert WMS server address: </string>
	<string name="text_server_type">Server Type</string>
	<string name="project_name_setting">New project</string>
	<string name="project_load">Load project</string>
	<string name="project_delete">Delete project</string>
	<string name="project_new_create">Create new project</string>
	<string name="project_reference_system">Reference system: </string>
	<string name="project_description">Description: </string>
	<string name="project_delete_this_project">Do you really want to delete this project?</string>
	<string name="project_file_deletet">Project file deletet</string>
	<string name="prjoect_cannot_delete_file">Could not delete project file</string>
	<string name="projectManager_no_project_selected">No project selected. Please choose a project!</string>
	<string name="projectManager_no_project_loaded">No project loaded. Please load a project!</string>
	<string name="project_please_set_project_name">Please indicate a projectname</string>
	<string name="title_activity_addProjectActivity">Project management</string>
	<string name="main_menue_projects">Project management</string>
	<string name="main_menue_help">Help</string>
	<string name="main_menue_settings">Add Layers</string>
	<string name="main_ask_load_layer_title">Please add a layer to your project</string>
	<string name="main_adk_load_layer_message">Do you want to add a layer?</string>
	<string name="addLayerActivity_load_layer_button">Load chosen layer(s)</string>
	<string name="layer_apply">Apply changes</string>
	<string name="layerView_have_to_choose_attribute">Please choose an attribute</string>
	<string name="WFSlayer_layer_load_question">Load layer?</string>
	<string name="WFSlayer_layer_message">The projects existing local data will be deleted before new layers are created!\nContinue?</string>
	<string name="WFSlayer_selected_layer_load">Load selected layer</string>
	<string name="WFSlayer_layer_request">WFS layer request</string>
	<string name="WFSlayer_layer_available_loading">Loading available WFS layers...</string>
	<string name="title_wfs_locking">Locked WFS layer</string>
	<string name="layerManager_feature_import_title">Feature import</string>
	<string name="layerManager_feature_import_message">\n\nAll features of this layer which are not synchronized will be lost!\n\n</string>
	<string name="layerManager_feature_import_all_message">\n\nAlle Features aller Layer, die nicht synchronisiert sind, werden gelöscht!\n\n</string>
	<string name="layerManager_feature_import_result_title">Import result</string>
	<string name="layerManager_feature_import_result_message">features have been successfully imported</string>
	<string name="layerManager_feature_import_result_error_message">An error occured during import of features.</string>
	<string name="layerManager_feature_import_loading">Importing features.Please wait...</string>
	<string name="layerManager_layer_delete_warning_title">Delete layer</string>
	<string name="layerManager_layer_delete_warning_message">Layer will be deleted!\nContinue?</string>
	<string name="layerManager_layer_empty_wms_list">Empty WMS list</string>
	<string name="layerManager_layer_empty_wfs_list">Empty WFS list</string>
	<string name="title_activity_layerManagerActivity">Layer management</string>
	<string name="help_define_parameters_title">Define parameters</string>
	<string name="help_define_parameters_number">Number: </string>
	<string name="help_define_parameters_insert">Insert</string>
	<string name="main_sync_message">All features have been successfully synchronized.</string>
	<string name="main_sync_result">Synchronization result</string>
	<string name="enter_coordinate_values">Enter coordinate values:</string>
	<string name="addLayerAcitivty_popup_text_title">Server Input Dialog</string>
	<string name="auto_sync_switch">Auto Sync\t\t\t\t</string>
	<string name="osm_switch">Open Street Map</string>
	<string name="geotechmobilesettingsactivity_tv_header_text">General settings for GeoTechMobile</string>
	<string name="geotechmobilesettingsactivity_button_resetServer_text">Reset Serverlists</string>
	<string name="geotechmobilesettingsactivity_tv_switch_osm_text">Activates or deactivates the OSM background map.</string>
	<string name="geotechmobilesettingsactivity_tv_switch_auto_sync_text">Activates or deactivates the automatic synchronization.</string>
	<string name="geotechmobilesettingsactivity_tv_button_resetserver_text">Set default values for the serverlists.</string>
	<string name="geotechmobilesettingsactivity_markers">Markers</string>
	<string name="geotechmobilesettingsactivity_tv_switch_markers">Activates or deactivates the Feauture Flag markers.</string>
	<string name="newserver_dialog_servername_textfortv">Name: </string>
	<string name="newserver_dialog_serverurl_textfortv">URL: </string>
	<string name="newserver_dialog_optionaleparameter_text">Please enter a user name and an optional password if the service requires Basic authentication</string>
	<string name="newserver_dialog_username_textfortv">Username: </string>
	<string name="newserver_dialog_password_textfortv">Password: </string>
	<string name="geotechmobilesettingsactivity_notSyncCyan_title">Cyan</string>
	<string name="geotechmobilesettingsactivity_notSyncCyan_text">Unsynchronized Features always drawn in Cyan.</string>
	<string name="geotechmobilesettingsactivity_switch_off">OFF</string>
	<string name="geotechmobilesettingsactivity_switch_on">ON</string>
</resources>